== SportsPress Changelog ==

= 2.6 =
* Feature - Add custom details to events using event specs.
* Feature - Conditional equations for variables.
* Feature - Display the next opponent in league tables.
* Feature - Short name option added to teams.
* Feature - Automatic event titles using short name when available.
* Feature - Display featured image in countdown widget.
* Tweak - Relative date option added to editor shortcodes.
* Tweak - Display only current team in player list.
* Tweak - Filter players dropdown by current team only.
* Tweak - Allow 0 as a squad number when importing players.
* Tweak - Prevent filtering through empty results.
* Fix - Interpreting non-integer substitution times.
* Fix - Warning when sorting terms without order.
* Localization - Add WPML support to staff header.
* Localization - Fix RTL not being applied in league tables.

= 2.5.10 =
* Fix - Date ranges not being applied to calendars.

= 2.5.9 =
* Fix - Unpublished posts being displayed in some themes.

= 2.5.8 =
* Fix - Display scheduled events using default permalinks via archives and third-party widgets.

= 2.5.7 =
* Fix - Blank general settings screen on WordPress versions prior to 4.9.
* Fix - Revert responsive table behavior to prevent display issues on mobile.

= 2.5.6 =
* Tweak - Adjust player-related hooks.
* Fix - Turn off responsive tables by default.

= 2.5.5 =
* Feature - Main league and current season settings.
* Feature - New shortcode including full staff profile.
* Feature - Add code highlighting to custom CSS field.
* Feature - Add responsive layout option to tables.
* Feature - Add filters to REST API players endpoint.
* Feature - Option to merge duplicate teams, players, and staff.
* Feature - Option to display specific event in event blocks.
* Feature - Option to sort player checklist by name and squad number in events.
* Feature - Option to filter player lists by team.
* Feature - Option to link staff members.
* Feature - Filter countdown by calendar.