@@ -60,6 +60,7 @@ if ( ! class_exists( 'SportsPress_Conditional_Equations' ) ) :
 		$options[ 'Operators' ]['>'] = '&gt;';
 		$options[ 'Operators' ]['<'] = '&lt;';
 		$options[ 'Operators' ]['=='] = '&equiv;';
+		$options[ 'Operators' ]['!='] = '&ne;';
 		$options[ 'Operators' ]['>='] = '&ge;';
 		$options[ 'Operators' ]['<='] = '&le;';
 		return $options;
@@ -82,7 +83,7 @@ if ( ! class_exists( 'SportsPress_Conditional_Equations' ) ) :
 			foreach ( $matches[1] as $match ) {
 				
 				// Find which Conditional Operator is used
-				preg_match ( '/[\>\=\<]+/' ,$match, $conop );
+				preg_match ( '/[\!\>\=\<]+/' ,$match, $conop );
 				$conop = $conop[0];
 				
 				//preg_match ( '/.+?(?=[\>\=\<])/' ,$match, $leftvar );
@@ -117,6 +118,9 @@ if ( ! class_exists( 'SportsPress_Conditional_Equations' ) ) :
 						break;
 					case '==':
 						$solution = (int) ( $leftvar == $rightvar );
+						break;
+					case '!=':
+						$solution = (int) ( $leftvar != $rightvar );
 						break;
 					case '>=':
 						$solution = (int) ( $leftvar >= $rightvar );
